--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <video autoplay muted loop>
-      <source src="./video.mp4" type="video/mp4">
+      <source src="./video.mov" type="video/mp4">
       Tu navegador no soporta videos en HTML5.
     </video>
 
